--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Unbenanntes Dokument</title>
+<title>Product Finder - BPM</title>
+<link rel="stylesheet" href="http://rawgit.com/frank-dspeed/product-finder/master/finder.css">
+<script language="javascript" type="text/javascript" src="http://rawgit.com/frank-dspeed/product-finder/master/finder.js"></script>
 </head>
 
 <body>
-<link rel="stylesheet" href="http://rawgit.com/frank-dspeed/product-finder/master/finder.css">
-<script language="javascript" type="text/javascript" src="http://rawgit.com/frank-dspeed/product-finder/master/finder.js"></script>
 <div class="uk-grid uk-grid-collapse">
   <div class="uk-width-medium-1-1">
     <div class="uk-panel uk-panel-box uk-panel-box-primary">
