--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Product Finder - BPM</title>
-<link rel="stylesheet" href="http://rawgit.com/frank-dspeed/product-finder/master/finder.css">
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="jquery-labelauty.js"></script>
 <style type="teyt/css">
@@ -158,7 +158,8 @@ input.labelauty + label > span.labelauty-checked-image
 			$(".to-labelauty-icon").labelauty({ label: false });
 		});
 	</script>
-  <script language="javascript" type="text/javascript" src="http://rawgit.com/frank-dspeed/product-finder/master/finder.js"></script>
+  <script language="javascript" type="text/javascript" src="https://rawgit.com/frank-dspeed/product-finder/master/finder.js"></script>
+  <link rel="stylesheet" href="https://rawgit.com/frank-dspeed/product-finder/master/finder.css">
 </head>
 
 <body>
