--- a/index.html
+++ b/index.html
@@ -5,161 +5,10 @@
 <title>Product Finder - BPM</title>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script src="jquery-labelauty.js"></script>
-<style type="teyt/css">
-  /*!
- * LABELAUTY jQuery Plugin Styles
- *
- * @file: jquery-labelauty.css
- * @author: Francisco Neves (@fntneves)
- * @site: www.francisconeves.com
- * @license: MIT License
- */
-
-/* Prevent text and blocks selection */
-input.labelauty + label ::selection { background-color: rgba(255, 255, 255, 0); }
-input.labelauty + label ::-moz-selection { background-color: rgba(255, 255, 255, 0); }
-
-/* Hide original checkboxes. They are ugly! */
-input.labelauty { display: none !important; }
-
-/*
- * Let's style the input
- * Feel free to work with it as you wish!
- */
-input.labelauty + label
-{
-	display: table;
-	font-size: 11px;
-	padding: 10px;
-	background-color: #efefef;
-	color: #b3b3b3;
-	cursor: pointer;
-
-	border-radius: 3px 3px 3px 3px;
-	-moz-border-radius: 3px 3px 3px 3px;
-	-webkit-border-radius: 3px 3px 3px 3px;
 
 
-	transition: background-color 0.25s;
-	-moz-transition: background-color 0.25s;
-	-webkit-transition: background-color 0.25s;
-	-o-transition: background-color 0.25s;
-
-	-moz-user-select: none;
-	-khtml-user-select: none;
-	-webkit-user-select: none;
-	-o-user-select: none;
-}
-
-/* Stylish text inside label */
-
-input.labelauty + label > span.labelauty-unchecked,
-input.labelauty + label > span.labelauty-checked
-{
-	display: inline-block;
-	line-height: 16px;
-	vertical-align: bottom;
-}
-
-/* Stylish icons inside label */
-
-input.labelauty + label > span.labelauty-unchecked-image,
-input.labelauty + label > span.labelauty-checked-image
-{
-	display: inline-block;
-	width: 16px;
-	height: 16px;
-	vertical-align: bottom;
-	background-repeat: no-repeat;
-	background-position: left center;
-
-	transition: background-image 0.5s linear;
-	-moz-transition: background-image 0.5s linear;
-	-webkit-transition: background-image 0.5s linear;
-	-o-transition: background-image 0.5s linear;
-}
-
-/* When there's a label, add a little margin to the left */
-input.labelauty + label > span.labelauty-unchecked-image + span.labelauty-unchecked,
-input.labelauty + label > span.labelauty-checked-image + span.labelauty-checked
-{
-	margin-left: 7px;
-}
-
-/* When not Checked */
-input.labelauty:not(:checked):not([disabled]) + label:hover
-{
-	background-color: #eaeaea;
-	color: #a7a7a7;
-}
-input.labelauty:not(:checked) + label > span.labelauty-checked-image
-{
-	display: none;
-}
-
-input.labelauty:not(:checked) + label > span.labelauty-checked
-{
-	display: none;
-}
-
-/* When Checked */
-input.labelauty:checked + label
-{
-	background-color: #3498db;
-	color: #ffffff;
-}
-
-input.labelauty:checked:not([disabled]) + label:hover
-{
-	background-color: #72c5fd;
-}
-input.labelauty:checked + label > span.labelauty-unchecked-image
-{
-	display: none;
-}
-
-input.labelauty:checked + label > span.labelauty-unchecked
-{
-	display: none;
-}
-
-input.labelauty:checked + label > span.labelauty-checked
-{
-	display: inline-block;
-}
-
-input.labelauty.no-label:checked + label > span.labelauty-checked
-{
-	display: block;
-}
-
-/* When Disabled */
-input.labelauty[disabled] + label
-{
-	opacity: 0.5;
-}
-
-/* Add a background to (un)checked images */
-input.labelauty + label > span.labelauty-unchecked-image
-{
-	background-image: url( unchecked.svg );
-}
-
-input.labelauty + label > span.labelauty-checked-image
-{
-	background-image: url( checked.svg );
-}
-  </style>
-
-	<script>
-		$(document).ready(function(){
-			$(".jquery-checkbox-label").labelauty({ minimum_width: "155px" });
-			$(".to-labelauty-icon").labelauty({ label: false });
-		});
-	</script>
-  <script language="javascript" type="text/javascript" src="https://rawgit.com/frank-dspeed/product-finder/master/finder.js"></script>
-  <link rel="stylesheet" href="https://rawgit.com/frank-dspeed/product-finder/master/finder.css">
+  <script language="javascript" type="text/javascript" src="finder.js"></script>
+  <link rel="stylesheet" href="finder.css">
 </head>
 
 <body>
@@ -182,15 +31,15 @@ input.labelauty + label > span.labelauty-checked-image
         <div class="uk-h2 hage">Please choose your age group</div>
         <div class="uk-grid" style="padding-top: 20px;">
           <div class="uk-width-1-1" style="" data-next="#finder-gender">
-            <input id="question1" name="age" type="radio" class="with-image age" value="sel" />
+            <input id="question1" name="age" type="radio" class="with-font age" value="sel" />
             <label for="question1">12-45</label>
           </div>
           <div class="uk-width-1-1" style="" data-next="#finder-gender">
-            <input id="question2" name="age" type="radio" class="with-image age" value="sel"/>
+            <input id="question2" name="age" type="radio" class="with-font age" value="sel"/>
             <label for="question2">45-55</label>
           </div>
           <div class="uk-width-1-1" >
-            <input id="question3" name="age" type="radio" class="with-image age" value="sel"/>
+            <input id="question3" name="age" type="radio" class="with-font age" value="sel"/>
             <label for="question3">55 above</label>
           </div>
         </div>
@@ -205,11 +54,11 @@ input.labelauty + label > span.labelauty-checked-image
         <div class="uk-h2 hgen">Please choose your gender</div>
         <div class="uk-grid" style="padding-top: 20px;">
           <div class="uk-width-1-1"  data-next="#finder-problems">
-            <input id="male" name="gender" type="radio" class="to-labelauty-icon gender" value="sel" />
+            <input id="male" name="gender" type="radio" class="with-font gender" value="sel" />
             <label for="male">Male</label>
           </div>
           <div class="uk-width-1-1">
-            <input id="female" name="gender" type="radio" class="to-labelauty-icon gender" value="sel"/>
+            <input id="female" name="gender" type="radio" class="with-font gender" value="sel"/>
             <label for="female">Female</label>
           </div>
         </div>
@@ -224,11 +73,11 @@ input.labelauty + label > span.labelauty-checked-image
         <div class="uk-h2 hpreg">Are you pregnant?</div>
         <div class="uk-grid" style="padding-top: 20px;">
           <div class="uk-width-1-1"  data-next="#finder-problems">
-            <input id="ispregnant" name="pregnant" type="radio" class="with-image pregnant" value="sel" />
+            <input id="ispregnant" name="pregnant" type="radio" class="with-font pregnant" value="sel" />
             <label for="ispregnant">Yes</label>
           </div>
           <div class="uk-width-1-1"  data-next="#finder-problems">
-            <input id="notpreg" name="pregnant" type="radio" class="with-image pregnant" value="sel"/>
+            <input id="notpreg" name="pregnant" type="radio" class="with-font pregnant" value="sel"/>
             <label for="notpreg">No</label>
           </div>
         </div>
@@ -244,19 +93,19 @@ input.labelauty + label > span.labelauty-checked-image
         <div class="uk-grid" style="padding-top: 20px;">
           <div class="uk-width-1-1"  >
             <div class="uk-width-1-1"  >
-              <input id="cardiac" type="checkbox" name="problems" class="with-image problems" val="sel" />
+              <input id="cardiac" type="checkbox" name="problems" class="with-font problems" val="sel" />
               <label for="cardiac">Cardiac problems (e.g. Arrhythmia)</label>
             </div>
             <div class="uk-width-1-1"  >
-              <input id="bloodpresure" type="checkbox" name="problems" class="to-labelauty-icon problems" val="sel" />
+              <input id="bloodpresure" type="checkbox" name="problems" class="with-font problems" val="sel" />
               <label for="bloodpresure">High blood pressure (Hypertension)</label>
             </div>
             <div class="uk-width-1-1"  >
-              <input id="diabetes" type="checkbox" name="problems" class="with-image problems" val="sel" />
+              <input id="diabetes" type="checkbox" name="problems" class="with-font problems" val="sel" />
               <label for="diabetes">Diabetes</label>
             </div>
             <div class="uk-width-1-1"  >
-              <input id="noprobs" type="checkbox" name="problems" class="with-image problems" val="sel" />
+              <input id="noprobs" type="checkbox" name="problems" class="with-font problems" val="sel" />
               <label for="noprobs">none of them</label>
             </div>
           </div>
